Make the empty site look pretty

--- a/css/antd.less
+++ b/css/antd.less
@@ -1,4 +1,8 @@
 @import "~antd/dist/antd.less";
 @import (inline) "google-fonts.css";
 
+html, body {
+  height: 100%;
+}
+
 // @primary-color: #C02428;
